--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -75,11 +75,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="lZx-6Q-bPq" detailTextLabel="zyn-Yt-n01" style="IBUITableViewCellStyleSubtitle" id="tXP-vt-FmD">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="lZx-6Q-bPq" detailTextLabel="zyn-Yt-n01" style="IBUITableViewCellStyleSubtitle" id="tXP-vt-FmD">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="lZx-6Q-bPq">
@@ -114,7 +114,7 @@
         <scene sceneID="obT-Yi-PLV">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="A4K-vD-yVD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="Ksg-Uj-eKq" sceneMemberID="viewController">
+                <viewController id="Ksg-Uj-eKq" customClass="addFeed" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="XYJ-OH-Gkj">
                         <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -122,27 +122,51 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" id="INb-T5-uTe">
                                 <rect key="frame" x="20" y="20" width="280" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="Title"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL" minimumFontSize="17" id="Eik-Lz-Dvo">
                                 <rect key="frame" x="20" y="59" width="280" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="URL">
+                                    <accessibilityTraits key="traits" none="YES"/>
+                                </accessibility>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="ESu-pS-xCK"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="New Feed" id="phr-oY-oj8">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="2QR-O1-mgM"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="2QR-O1-mgM">
+                            <connections>
+                                <action selector="saveAction" destination="Ksg-Uj-eKq" id="DvB-V8-vEm"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="detailField" destination="Eik-Lz-Dvo" id="YbN-Jp-x3H"/>
+                        <outlet property="titleField" destination="INb-T5-uTe" id="It8-j2-AMw"/>
+                    </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="982" y="422"/>
         </scene>
     </scenes>
     <classes>
+        <class className="addFeed" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/addFeed.h"/>
+            <relationships>
+                <relationship kind="outlet" name="detailField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="testLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
         <class className="feedItems" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/feedItems.h"/>
         </class>
