--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -9,9 +9,16 @@
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LOL-Wv-YAz" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController definesPresentationContext="YES" id="zOh-ow-8Zz" sceneMemberID="viewController">
+                    <nil key="simulatedStatusBarMetrics"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="E5U-64-tm9">
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                     </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" barStyle="blackOpaque" id="wYa-ox-mxh">
+                        <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="GdF-cb-V1U" kind="relationship" relationship="rootViewController" id="tPE-kK-dz4"/>
                     </connections>
@@ -24,7 +31,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="inj-P4-F1i" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="GdF-cb-V1U" customClass="feedsList" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9Nj-UV-Zgv">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="44" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -55,13 +62,7 @@
                             <outlet property="delegate" destination="GdF-cb-V1U" id="3VU-al-zKs"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Feeds" id="seI-sz-xDH">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fJQ-5B-bRv">
-                            <connections>
-                                <segue destination="Ksg-Uj-eKq" kind="push" identifier="ShowNewFeed" id="flM-Fo-Du4"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Feeds" id="seI-sz-xDH"/>
                 </tableViewController>
             </objects>
             <point key="canvasLocation" x="481" y="117"/>
@@ -71,7 +72,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hmk-4y-khv" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="sqK-v7-iJG" customClass="feedItems" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="dsi-mG-g3r">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="44" width="320" height="436"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -109,64 +110,10 @@
                     <navigationItem key="navigationItem" id="Swe-dY-pjg"/>
                 </tableViewController>
             </objects>
-            <point key="canvasLocation" x="982" y="-174"/>
-        </scene>
-        <scene sceneID="obT-Yi-PLV">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="A4K-vD-yVD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="Ksg-Uj-eKq" customClass="addFeed" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XYJ-OH-Gkj">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" id="INb-T5-uTe">
-                                <rect key="frame" x="20" y="20" width="280" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration" label="Title"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="URL" minimumFontSize="17" id="Eik-Lz-Dvo">
-                                <rect key="frame" x="20" y="59" width="280" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration" label="URL">
-                                    <accessibilityTraits key="traits" none="YES"/>
-                                </accessibility>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <toolbarItems>
-                        <barButtonItem title="Item" id="ESu-pS-xCK"/>
-                    </toolbarItems>
-                    <navigationItem key="navigationItem" title="New Feed" id="phr-oY-oj8">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="2QR-O1-mgM">
-                            <connections>
-                                <action selector="saveAction" destination="Ksg-Uj-eKq" id="DvB-V8-vEm"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="detailField" destination="Eik-Lz-Dvo" id="YbN-Jp-x3H"/>
-                        <outlet property="titleField" destination="INb-T5-uTe" id="It8-j2-AMw"/>
-                    </connections>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="982" y="422"/>
+            <point key="canvasLocation" x="925" y="117"/>
         </scene>
     </scenes>
     <classes>
-        <class className="addFeed" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/addFeed.h"/>
-            <relationships>
-                <relationship kind="outlet" name="detailField" candidateClass="UITextField"/>
-                <relationship kind="outlet" name="testLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="titleField" candidateClass="UITextField"/>
-            </relationships>
-        </class>
         <class className="feedItems" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/feedItems.h"/>
         </class>
